--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,28 +6,28 @@ env:
   CARGO_TERM_COLOR: always
 jobs:
   test:
-    name: 'coverage'
+    name: "coverage"
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         build: [stable]
         include:
-        - build: stable
-          os: ubuntu-latest
-          rust: nightly
+          - build: stable
+            os: ubuntu-latest
+            rust: nightly
     steps:
-    - name: 'Checkout repository'
-      uses: actions/checkout@v2.3.4
-      with:
-        fetch-depth: 1
-        
-    - name: 'Enable caching'
-      uses: Swatinem/rust-cache@v1.3.0
-      
-    - name: Push to codecov.io
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      run: |
-        cargo install cargo-tarpaulin
-        cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml
-        bash <(curl -s https://codecov.io/bash) -X gcov -t $CODECOV_TOKEN
+      - name: "Checkout repository"
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: "Enable caching"
+        uses: Swatinem/rust-cache@v2
+
+      - name: Push to codecov.io
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        run: |
+          cargo install cargo-tarpaulin
+          cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml
+          bash <(curl -s https://codecov.io/bash) -X gcov -t $CODECOV_TOKEN
