--- a/.github/workflows/crates.yml
+++ b/.github/workflows/crates.yml
@@ -9,33 +9,33 @@ env:
   CARGO_TERM_COLOR: always
 jobs:
   test:
-    name: 'publish'
+    name: "publish"
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         build: [linux]
         include:
-        - build: linux
-          os: ubuntu-latest
-          rust: stable
+          - build: linux
+            os: ubuntu-latest
+            rust: stable
     steps:
-    - name: 'Checkout repository'
-      uses: actions/checkout@v2.3.4
-      with:
-        fetch-depth: 1
-        
-    - name: 'Install Rust'
-      uses: actions-rs/toolchain@v1.0.6
-      with:
-        toolchain: ${{ matrix.rust }}
-        override: true
-        profile: default
-        
-    - name: 'Enable caching'
-      uses: Swatinem/rust-cache@v1.3.0
+      - name: "Checkout repository"
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
-    - name: 'Publish on crates.io'
-      uses: actions-rs/cargo@v1.0.1
-      with:
-        command: publish
-        args: --verbose --all-features --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: "Install Rust"
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ matrix.rust }}
+          override: true
+          profile: default
+
+      - name: "Enable caching"
+        uses: Swatinem/rust-cache@v2
+
+      - name: "Publish on crates.io"
+        uses: actions-rs/cargo@v1
+        with:
+          command: publish
+          args: --verbose --all-features --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
