--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -72,7 +72,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Rust toolchain
         uses: actions-rs/toolchain@v1
@@ -80,14 +80,14 @@ jobs:
           toolchain: stable
           target: ${{ matrix.target }}
 
-      - name: 'Enable caching'
-        uses: Swatinem/rust-cache@v1
+      - name: "Enable caching"
+        uses: Swatinem/rust-cache@v2
 
       - name: cargo build
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --all-features --release --target=${{ matrix.target }} 
+          args: --all-features --release --target=${{ matrix.target }}
           use-cross: ${{ matrix.cross }}
 
       - name: Compress binaries
@@ -99,7 +99,7 @@ jobs:
         if: ${{ matrix.compress }}
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.target }}
           path: ${{ matrix.artifact_name }}
@@ -116,7 +116,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
 
       - name: Publish
-        uses: svenstaro/upload-release-action@v2
+        uses: svenstaro/upload-release-action@v2.7.0
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{ matrix.artifact_name }}
