--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -75,20 +75,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.target }}
+        uses: dtolnay/rust-toolchain@stable
 
       - name: "Enable caching"
         uses: Swatinem/rust-cache@v2
 
       - name: cargo build
-        uses: actions-rs/cargo@v1
+        uses: houseabsolute/actions-rust-cross@v0
         with:
           command: build
           args: --all-features --release --target=${{ matrix.target }}
-          use-cross: ${{ matrix.cross }}
 
       - name: Compress binaries
         uses: svenstaro/upx-action@v2
@@ -116,7 +112,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
 
       - name: Publish
-        uses: svenstaro/upload-release-action@v2.7.0
+        uses: svenstaro/upload-release-action@v2.9.0
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{ matrix.artifact_name }}
